use new command context, db query
Took 19 minutes